[package]
name = "kumolang"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sexp = "1.1.4"
uuid = { version = "=1.23.3", features = ["v4", "js"] }
wasm-bindgen = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
